--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "electronics_shop_project"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 pytest = "^7.3.0"
+function = "^1.2.0"
+sds = "^2.0.1"
 
 
 [build-system]
